
function(build_component name src)
	add_library(obj-${name} OBJECT ${src})
	set_property(TARGET obj-${name} PROPERTY POSITION_INDEPENDENT_CODE ON)
	target_compile_definitions(obj-${name} PRIVATE RTAPI USPACE __MODULE__)

	add_custom_command(OUTPUT ${name}.tmp
		COMMAND ld -r -s -o ${name}.tmp $<TARGET_OBJECTS:obj-${name}>
		DEPENDS obj-${name})
	add_custom_command(OUTPUT ${name}.ver
		COMMAND sh ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/generate_version_script.sh ${name}.tmp > ${name}.ver
		DEPENDS ${name}.tmp scripts)

	add_custom_target(${name}-ver ALL DEPENDS ${name}.ver)

	add_library(${name} SHARED $<TARGET_OBJECTS:obj-${name}>)
	target_link_libraries(${name} PRIVATE rtapi_lib)
	add_dependencies(${name} ${name}-ver)

	set_target_properties(${name} PROPERTIES PREFIX "")
	set_target_properties(${name} PROPERTIES LINK_FLAGS "-Bsymbolic -Wl,--version-script='${name}.ver'")
	set_target_properties(${name} PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/rtlib)
endfunction()

function(compile_component name src)
	get_filename_component(SRC_NAME ${src} NAME_WE)
	add_custom_command(OUTPUT ${SRC_NAME}.c
		COMMAND ${Python3_EXECUTABLE} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/halcompile.py --preprocess -o ${SRC_NAME}.c ${CMAKE_CURRENT_SOURCE_DIR}/${src}
		DEPENDS halcompile ${src})

	build_component(${name} ${SRC_NAME})
endfunction()

build_component(hal_rt ../hal_lib.c)
build_component(scope_rt ../utils/scope_rt.c)
build_component(boss_plc boss_plc.c)
build_component(debounce debounce.c)
build_component(encoder encoder.c)
build_component(counter counter.c)
build_component(encoder_ratio encoder_ratio.c)
build_component(stepgen stepgen.c)
build_component(lcd lcd.c)
build_component(matrix_kb matrix_kb.c)
build_component(mux_generic mux_generic.c)
build_component(pwmgen pwmgen.c)
build_component(siggen siggen.c)
build_component(pid pid.c)
build_component(at_pid at_pid.c)
build_component(threads threads.c)
build_component(supply supply.c)
build_component(sim_encoder sim_encoder.c)
build_component(weighted_sum weighted_sum.c)
build_component(watchdog watchdog.c)
build_component(modmath modmath.c)
build_component(streamer streamer.c)
build_component(sampler sampler.c)

set(CLASSICLADDER_RT_SOURCES
	../classicladder/module_hal.c
	../classicladder/arithm_eval.c
	../classicladder/arrays.c
	../classicladder/calc.c
	../classicladder/calc_sequential.c
	../classicladder/manager.c
	../classicladder/symbols.c
	../classicladder/vars_access.c
	)

build_component(classicladder_rt ${CLASSICLADDER_RT_SOURCES})

compile_component(abs_s32 abs_s32.comp)
compile_component(abs abs.comp)
compile_component(and2 and2.comp)
compile_component(axistest axistest.comp)
compile_component(bin2gray bin2gray.comp)
compile_component(biquad biquad.comp)
compile_component(bitslice bitslice.comp)
compile_component(bitwise bitwise.comp)
compile_component(bldc bldc.comp)
compile_component(blend blend.comp)
compile_component(carousel carousel.comp)
compile_component(charge_pump charge_pump.comp)
compile_component(clarke2 clarke2.comp)
compile_component(clarke3 clarke3.comp)
compile_component(clarkeinv clarkeinv.comp)
compile_component(comp comp.comp)
compile_component(constant constant.comp)
compile_component(corexy_by_hal corexy_by_hal.comp)
compile_component(dbounce dbounce.comp)
compile_component(ddt ddt.comp)
compile_component(deadzone deadzone.comp)
compile_component(demux demux.comp)
compile_component(differential differential.comp)
compile_component(edge edge.comp)
compile_component(eoffset_per_angle eoffset_per_angle.comp)
compile_component(estop_latch estop_latch.comp)
compile_component(feedcomp feedcomp.comp)
compile_component(filter_kalman filter_kalman.comp)
compile_component(flipflop flipflop.comp)
compile_component(gantry gantry.comp)
compile_component(gearchange gearchange.comp)
compile_component(gray2bin gray2bin.comp)
compile_component(histobins histobins.comp)
compile_component(hypot hypot.comp)
compile_component(ilowpass ilowpass.comp)
compile_component(integ integ.comp)
compile_component(invert invert.comp)
compile_component(joyhandle joyhandle.comp)
compile_component(knob2float knob2float.comp)
compile_component(latencybins latencybins.comp)
compile_component(limit1 limit1.comp)
compile_component(limit2 limit2.comp)
compile_component(limit3 limit3.comp)
compile_component(lincurve lincurve.comp)
compile_component(logic logic.comp)
compile_component(lowpass lowpass.comp)
compile_component(lut5 lut5.comp)
compile_component(maj3 maj3.comp)
compile_component(match8 match8.comp)
compile_component(max31855 max31855.comp)
compile_component(mesa_pktgyro_test mesa_pktgyro_test.comp)
compile_component(message message.comp)
compile_component(minmax minmax.comp)
compile_component(moveoff moveoff.comp)
compile_component(mult2 mult2.comp)
compile_component(multiclick multiclick.comp)
compile_component(multiswitch multiswitch.comp)
compile_component(mux16 mux16.comp)
compile_component(mux2 mux2.comp)
compile_component(mux4 mux4.comp)
compile_component(mux8 mux8.comp)
compile_component(near near.comp)
compile_component(not not.comp)
compile_component(offset offset.comp)
compile_component(ohmic ohmic.comp)
compile_component(oneshot oneshot.comp)
compile_component(or2 or2.comp)
compile_component(orient orient.comp)
compile_component(plasmac plasmac.comp)
compile_component(sample_hold sample_hold.comp)
compile_component(scale scale.comp)
compile_component(select8 select8.comp)
compile_component(sim_axis_hardware sim_axis_hardware.comp)
compile_component(sim_home_switch sim_home_switch.comp)
compile_component(sim_matrix_kb sim_matrix_kb.comp)
compile_component(sim_parport sim_parport.comp)
compile_component(sim_spindle sim_spindle.comp)
compile_component(simple_tp simple_tp.comp)
compile_component(sphereprobe sphereprobe.comp)
compile_component(spindle_monitor spindle_monitor.comp)
compile_component(spindle spindle.comp)
compile_component(steptest steptest.comp)
compile_component(sum2 sum2.comp)
compile_component(thc thc.comp)
compile_component(thcud thcud.comp)
compile_component(threadtest threadtest.comp)
compile_component(time time.comp)
compile_component(timedelay timedelay.comp)
compile_component(timedelta timedelta.comp)
compile_component(toggle toggle.comp)
compile_component(toggle2nist toggle2nist.comp)
compile_component(tristate_bit tristate_bit.comp)
compile_component(tristate_float tristate_float.comp)
compile_component(updown updown.comp)
compile_component(userkins userkins.comp)
compile_component(wcomp wcomp.comp)
compile_component(xhc_hb04_util xhc_hb04_util.comp)
compile_component(xor2 xor2.comp)

if(${BUILD_PARPORT})
	build_component(hal_parport ../drivers/hal_parport.c)
endif()

# drivers
if(${CMAKE_SYSTEM} MATCHES "Linux")
	build_component(pci_8255 ../drivers/pci_8255.c)
	build_component(hal_tiro ../drivers/hal_tiro.c)
	build_component(hal_stg ../drivers/hal_stg.c)
	build_component(hal_vti ../drivers/hal_vti.c)
	build_component(hal_evoreg ../drivers/hal_evoreg.c)
	build_component(hal_motenc ../drivers/hal_motenc.c)
	build_component(hal_ax5214h ../drivers/hal_ax5214h.c)
	build_component(hal_speaker ../drivers/hal_speaker.c)
	build_component(hal_skeleton ../drivers/hal_skeleton.c)
	build_component(opto_ac5 ../drivers/opto_ac5.c)
endif()

function(generate_conv_component name options)
	add_custom_command(OUTPUT ${name}.comp
			COMMAND sh ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/mkconv.sh ${options} < ${CMAKE_CURRENT_SOURCE_DIR}/conv.comp.in > ${name}.comp
			DEPENDS scripts conv.comp.in ${name}.comp)

	compile_component(${name} ${name}.comp)
endfunction()

generate_conv_component(conv_float_s32 float s32 "" -2147483647-1 2147483647)
generate_conv_component(conv_float_u32 float u32 "" 2147483647)
generate_conv_component(conv_bit_s32 float s32 //)
generate_conv_component(conv_bit_u32 float u32 //)
generate_conv_component(conv_bit_float bit float //)
generate_conv_component(conv_s32_float s32 float //)
generate_conv_component(conv_s32_bit s32 bit "" 0 1)
generate_conv_component(conv_s32_u32 s32 u32 "" 0 0)
generate_conv_component(conv_u32_float u32 float //)
generate_conv_component(conv_u32_bit u32 bit "" -1 1)
generate_conv_component(conv_u32_s32 u32 s32 "" -1 2147483647)
